styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');

* {font-family: 'Roboto Condensed', sans-serif;}

a {
    text-decoration: none;
    color: #262626 !important;
    font-weight: 500;
}

a:hover {
    color: #FF9000 !important;
    text-decoration: none;
}

ul {list-style-type: none;}

hr {
    margin-top: 0px;
    margin-bottom: 5%;
}

#MainMenu {visibility: hidden;}
footer {visibility: hidden;}
header {visibility: hidden;}

